# generand

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
benches/: benchmark.rs
src/: consts.rs  generate.rs  lib.rs  main.rs
