[package]
name = "generand"
version = "1.0.0"
edition = "2021"
authors = [ "Baptiste Canton <bat@sbz.fr>" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.1.18", features = ["derive"], optional = true}

[features]
default = []
bin = ["clap"]

[[bin]]
name = "generand"
required-features = ["bin"]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false


