[package]
name = "generand"
version = "1.0.1"
edition = "2021"
authors = ["Baptiste Canton <bat@sbz.fr>"]
license = "MIT OR Apache-2.0"
description = "generate random sequences from your string/vec/iterator symbols."
readme = "README.md"
repository = "https://github.com/batmac/generand"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.2.25", features = ["derive"], optional = true }
terminal_size = { version = "0.4.0", optional = true }

[features]
default = []
bin = ["clap", "terminal_size"]

[[bin]]
name = "generand"
required-features = ["bin"]

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "benchmark"
harness = false
